# Rehumile

./: .env.example  .gitignore  .replit  DEPLOY_PYTHONANYWHERE.md  HQ_Upgarde_requirements.txt  IT_Enterprise_Financial_Blueprint.docx  QUICKSTART.md  README.md  SETUP.md  System_requirements.txt  fullhouse_upgrade.txt  pnpm-lock.yaml  pyproject.toml  requirements.txt
attached_assets/: Pasted-Create-a-professional-modern-responsive-website-for-an-_1779827866080.txt
config/: settings.py  urls.py
ims/: __init__.py  admin.py  apps.py  models.py  payfast.py  permissions.py  portal_views.py  serializers.py  urls.py  views.py
plan/: API_ENDPOINTS.md  COMPLETION_SUMMARY.md  DATABASE_OVERVIEW.md  DATABASE_SCHEMA.md  DELIVERY_CHECKLIST.md  DJANGO_DATABASE_GUIDE.md  DJANGO_IMPLEMENTATION_SUMMARY.md  DJANGO_SETUP_GUIDE.md  DOCUMENTATION_INDEX.md  ERD_DIAGRAM.md  IMPLEMENTATION_GUIDE.md  README_DJANGO_DATABASE.md  TECHNICAL_ARCHITECTURE.md
staticfiles/: client-billing.html  client-contact.html  client-create-ticket.html  client-dashboard.html  client-notifications.html  client-profile.html  client-ticket-detail.html  client-tickets.html  hq-audit-log.html  hq-cash-management.html  hq-companies.html  hq-compliance.html  hq-dashboard.html  hq-emp201.html  hq-financial-analytics.html  hq-hr.html  hq-incidents.html  hq-inventory.html  hq-invoices.html  hq-job-cards.html  hq-notifications.html  hq-playbook.html  hq-pos.html  hq-reports.html  hq-revenue-intelligence.html  hq-settings.html  hq-sla-monitor.html  hq-users.html  hq-vat201.html  hq-vouchers.html  hq-website.html  (+10 more)
(+117 files in other folders)
