[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url==2.0.0",
    "django==4.2.0",
    "django-cors-headers==4.0.0",
    "django-filter==23.2",
    "django-phonenumber-field==7.2.0",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.2.2",
    "drf-spectacular==0.26.2",
    "gunicorn==21.2.0",
    "phonenumbers==8.13.0",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.9",
    "pyjwt==2.8.0",
    "python-dateutil==2.8.2",
    "python-decouple==3.8",
    "pytz==2023.3",
    "whitenoise==6.5.0",
]
